force-app/main/default/objects/Assigned_Exam__c/Assigned_Exam__c.object-meta.xml
<CustomObject>
    <label>Assigned Exam</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assigned Exam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>