force-app/main/default/objects/Assigned_Exam__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Assigned Exams</relationshipLabel>
    <relationshipName>Assigned_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>