force-app/main/default/objects/Assigned_Exam__c/fields/Time_Till_Completion__c.field-meta.xml
<CustomField>
    <fullName>Time_Till_Completion__c</fullName>
    <label>Time Till Completion</label>
    <type>Time</type>
</CustomField>