force-app/main/default/objects/Assigned_Exam__c/fields/Time_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Complete__c</fullName>
    <label>Time To Complete</label>
    <type>Time</type>
</CustomField>